--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -108,7 +108,7 @@
         
       </footer>
     </div>
-    <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js)
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EYMP42XMVL"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -116,8 +116,8 @@
       gtag('js', new Date());
 
       gtag('config', 'G-EYMP42XMVL');
-    </script>
-    <!-- <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    </script> -->
+    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -127,6 +127,6 @@
       ga('create', '{{ site.google_analytics }}', 'auto');
       ga('send', 'pageview');
     </script>
-    {% endif %} -->
+    {% endif %}
   </body>
 </html>
