--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -108,16 +108,18 @@
         
       </footer>
     </div>
-    <!-- Google tag (gtag.js)
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EYMP42XMVL"></script>
+    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <!-- Google tag (gtag.js) -->
+    {% if site.google_analytics %}
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
-      gtag('config', 'G-EYMP42XMVL');
-    </script> -->
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+      gtag('config', '{{ site.google_analytics }}');
+    </script>
+    {% endif %}
+    <!-- <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -127,6 +129,6 @@
       ga('create', '{{ site.google_analytics }}', 'auto');
       ga('send', 'pageview');
     </script>
-    {% endif %}
+    {% endif %} -->
   </body>
 </html>
