--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -111,12 +111,13 @@
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     <!-- Google tag (gtag.js) -->
     {% if site.google_analytics %}
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EYMP42XMVL"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', '{{ site.google_analytics }}');
+
+      gtag('config', 'G-EYMP42XMVL');
     </script>
     {% endif %}
     <!-- <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
