--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -91,7 +91,7 @@
         {% endif %}
         </div>
         <br>
-
+      <script type="text/javascript" id="mmvst_globe" src="//mapmyvisitors.com/globe.js?d=TwJai5m-HEvyMht3CwtzGGc0-UQ_4KV3IM3MJmcpN5g"></script>
       </header>
       <section>
 
