--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -91,7 +91,8 @@
         {% endif %}
         </div>
         <br>
-      <script type="text/javascript" id="mmvst_globe" src="//mapmyvisitors.com/globe.js?d=TwJai5m-HEvyMht3CwtzGGc0-UQ_4KV3IM3MJmcpN5g"></script>
+      <!-- <script type="text/javascript" id="mmvst_globe" src="//mapmyvisitors.com/globe.js?d=TwJai5m-HEvyMht3CwtzGGc0-UQ_4KV3IM3MJmcpN5g"></script> -->
+      <!-- <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=rOczFrDt8d1uxH5S73vaoy6ckCUyuOoGqs_WIAMtFZg&cl=ffffff&w=a"></script> -->
       </header>
       <section>
 
@@ -120,6 +121,7 @@
       gtag('config', 'G-EYMP42XMVL');
     </script>
     {% endif %}
+    <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=rOczFrDt8d1uxH5S73vaoy6ckCUyuOoGqs_WIAMtFZg&cl=ffffff&w=a"></script>
     <!-- <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
     <script>
