--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -121,7 +121,7 @@
       gtag('config', 'G-EYMP42XMVL');
     </script>
     {% endif %}
-    <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=rOczFrDt8d1uxH5S73vaoy6ckCUyuOoGqs_WIAMtFZg&cl=ffffff&w=a"></script>
+    <!-- <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=rOczFrDt8d1uxH5S73vaoy6ckCUyuOoGqs_WIAMtFZg&cl=ffffff&w=a"></script> -->
     <!-- <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
     <script>
