--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -92,7 +92,7 @@
         </div>
         <br>
       <!-- <script type="text/javascript" id="mmvst_globe" src="//mapmyvisitors.com/globe.js?d=TwJai5m-HEvyMht3CwtzGGc0-UQ_4KV3IM3MJmcpN5g"></script> -->
-      <!-- <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=rOczFrDt8d1uxH5S73vaoy6ckCUyuOoGqs_WIAMtFZg&cl=ffffff&w=a"></script> -->
+      <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=rOczFrDt8d1uxH5S73vaoy6ckCUyuOoGqs_WIAMtFZg&cl=ffffff&w=a"></script>
       </header>
       <section>
 
@@ -122,16 +122,5 @@
     </script>
     {% endif %}
     <!-- <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=rOczFrDt8d1uxH5S73vaoy6ckCUyuOoGqs_WIAMtFZg&cl=ffffff&w=a"></script> -->
-    <!-- <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %} -->
   </body>
 </html>
