--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -92,7 +92,8 @@
         </div>
         <br>
       <!-- <script type="text/javascript" id="mmvst_globe" src="//mapmyvisitors.com/globe.js?d=TwJai5m-HEvyMht3CwtzGGc0-UQ_4KV3IM3MJmcpN5g"></script> -->
-      <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=rOczFrDt8d1uxH5S73vaoy6ckCUyuOoGqs_WIAMtFZg&cl=ffffff&w=a"></script>
+      <!-- <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=rOczFrDt8d1uxH5S73vaoy6ckCUyuOoGqs_WIAMtFZg&cl=ffffff&w=a"></script> -->
+      <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=45t8HfW4vssZTay-pXP2CqjtC1S3NbV58iTyhGi3lOg"></script>
       </header>
       <section>
 
